--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 
 [theme]
-primaryColor = "#EA7A05"          # Orange TIRCIS
-backgroundColor = "#F0F0F0"       # Gris très clair
-secondaryBackgroundColor = "#EA7A05"          # Orange TIRCIS
-textColor = "#262730"             # Gris foncé
-font = "sans serif"               # ou "monospace", "serif"
+primaryColor = "#EA7A05"                # Orange TIRCIS
+backgroundColor = "#F0F0F0"             # Gris très clair
+secondaryBackgroundColor = "#EA7A05"    # Orange TIRCIS
+textColor = "#3B3B3B"                   # Gris foncé
+font = "sans serif"                     # ou "monospace", "serif"
